# chatto-tauri

./: README.md  package.json
.github/ISSUE_TEMPLATE/: desktop-app.yml
.github/workflows/: build.yml
android-twa/: .gitignore  README.md  assetlinks.json  twa-manifest.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/src/: lib.rs
src/routes/: +page.svelte
