[package]
name = "chatto-tauri"
version = "0.4.2"
description = "Tauri wrapper for Chatto"
authors = ["Teal Bauer <opensource@teal.is>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "chatto_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
base64 = "0.22"
mime_guess = "2"
